--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,9 +22,9 @@
   </head>
 
   <body>
-    <header>
-      <div>
-        <nav>
+    <header class="header-line">
+      <div class="container top-line">
+        <nav class="navigation">
           <a href="./index.html" class="logo">
             <span class="logo-accent">Web</span><span>Studio</span>
           </a>
@@ -47,137 +54,137 @@
     </header>
 
     <main>
-      <section class="hero-image">
+      <div class="hero-image">
         <h1 class="title">Effective Solutions for Your Business</h1>
         <button type="button" class="hero-button">Order Service</button>
-      </section>
-      <section>
-        <ul class="feature-list">
-          <li>
-            <h3 class="feature">Strategy</h3>
-            <p class="feature-description">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="feature">Punctuality</h3>
-            <p class="feature-description">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="feature">Diligence</h3>
-            <p class="feature-description">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="feature">Technologies</h3>
-            <p class="feature-description">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      </div>
+      <section class="section">
+        <div class="container">
+          <ul class="feature-list">
+            <li>
+              <h3 class="feature">Strategy</h3>
+              <p class="feature-description">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="feature">Punctuality</h3>
+              <p class="feature-description">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="feature">Diligence</h3>
+              <p class="feature-description">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="feature">Technologies</h3>
+              <p class="feature-description">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+
+          <h2 class="spec-header">What are we doing</h2>
+          <ul class="spec-list">
+            <li>
+              <img
+                src="images/1.jpg"
+                alt="desktop computer screen with application displayed"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img
+                src="images/2.jpg"
+                alt="phone with several application screens displayed one above the other"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img
+                src="images/3.jpg"
+                alt="the same application displayed on the phone and computer screen"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section>
-        <h2 class="header">What are we doing</h2>
-        <ul class="spec-list">
-          <li>
-            <img
-              src="./images/1.jpg"
-              alt="desktop computer screen with application displayed"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/2.jpg"
-              alt="phone with several application screens displayed one above the other"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/3.jpg"
-              alt="the same application displayed on the phone and computer screen"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
-      </section>
-
-      <section class="team-box">
-        <h2 class="header">Our team</h2>
-        <ul class="team-list">
-          <li>
-            <img
-              src="./images/4.jpg"
-              alt="brunette guy looking straight ahead with stubble in a blue shirt"
-              width="264"
-              height="260"
-            />
-            <div>
-              <h3 class="worker-name">Mark Guerrero</h3>
-              <p class="worker-description">Product Designer</p>
-            </div>
-          </li>
-          <li>
-            <img
-              src="./images/5.jpg"
-              alt="brunette guy looking to the left smiling in blue shirt"
-              width="264"
-              height="260"
-            />
-            <div>
-              <h3 class="worker-name">Tom Ford</h3>
-              <p class="worker-description">Frontend Developer</p>
-            </div>
-          </li>
-          <li>
-            <img
-              src="./images/6.jpg"
-              alt="girl with long black hair looks straight ahead she is dressed in a pink sweater"
-              width="264"
-              height="260"
-            />
-            <div>
-              <h3 class="worker-name">Camila Garcia</h3>
-              <p class="worker-description">cMarketing</p>
-            </div>
-          </li>
-          <li>
-            <img
-              src="./images/7.jpg"
-              alt="brunette guy with stubble looks straight ahead and smiles wearing a gray t-shirt"
-              width="264"
-              height="260"
-            />
-            <div>
-              <h3 class="worker-name">Daniel Wilson</h3>
-              <p class="worker-description">UI Designer</p>
-            </div>
-          </li>
-        </ul>
-      </section>
+      <div class="team-box">
+        <section class="section">
+          <div class="container">
+            <h2 class="team-header">Our team</h2>
+            <ul class="team-list">
+              <li>
+                <img
+                  src="images/4.jpg"
+                  alt="brunette guy looking straight ahead with stubble in a blue shirt"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="worker-name">Mark Guerrero</h3>
+                <p class="worker-description">Product Designer</p>
+              </li>
+              <li>
+                <img
+                  src="images/5.jpg"
+                  alt="brunette guy looking to the left smiling in blue shirt"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="worker-name">Tom Ford</h3>
+                <p class="worker-description">Frontend Developer</p>
+              </li>
+              <li>
+                <img
+                  src="images/6.jpg"
+                  alt="girl with long black hair looks straight ahead she is dressed in a pink sweater"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="worker-name">Camila Garcia</h3>
+                <p class="worker-description">cMarketing</p>
+              </li>
+              <li>
+                <img
+                  src="images/7.jpg"
+                  alt="brunette guy with stubble looks straight ahead and smiles wearing a gray t-shirt"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="worker-name">Daniel Wilson</h3>
+                <p class="worker-description">UI Designer</p>
+              </li>
+            </ul>
+          </div>
+        </section>
+      </div>
     </main>
 
     <footer class="footer-bg">
-      <a href="./index.html" class="logo">
-        <span class="logo-accent">Web</span
-        ><span class="logo-accent-white">Studio</span>
-      </a>
-      <p class="footer-slogan">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <section class="section">
+        <div class="container">
+          <a href="./index.html" class="logo">
+            <span class="logo-accent">Web</span
+            ><span class="logo-accent-white">Studio</span>
+          </a>
+          <p class="footer-slogan">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+      </section>
     </footer>
   </body>
 </html>
