--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
           
             <ul class="projects-list">
               <li>
-                <img
+                <img class="img"
                   src="./images/portfolio1.jpg"
                   alt="screens of banking mobilephone aplication "
                   width="360"
@@ -75,7 +75,7 @@
                 </div>
               </li>
               <li>
-                <img
+                <img class="img"
                   src="./images/portfolio2.jpg"
                   alt="payment by mobile phone"
                   width="360"
@@ -87,7 +87,7 @@
                 </div>
               </li>
               <li>
-                <img
+                <img class="img"
                   src="./images/portfolio3.jpg"
                   alt="laptop and mobile phone with the same app on screen"
                   width="360"
@@ -99,7 +99,7 @@
                 </div>
               </li>
               <li>
-                <img
+                <img class="img"
                   src="./images/portfolio4.jpg"
                   alt="interior of car"
                   width="360"
@@ -111,7 +111,7 @@
                 </div>
               </li>
               <li>
-                <img
+                <img class="img"
                   src="./images/portfolio5.jpg"
                   alt="5 phone wallpapers"
                   width="360"
@@ -123,7 +123,7 @@
                 </div>
               </li>
               <li>
-                <img
+                <img class="img"
                   src="./images/portfolio6.jpg"
                   alt="happy woman look at the phone"
                   width="360"
@@ -135,7 +135,7 @@
                 </div>
               </li>
               <li>
-                <img
+                <img class="img"
                   src="./images/portfolio7.jpg"
                   alt="some screenshots of instagram stories"
                   width="360"
@@ -147,7 +147,7 @@
                 </div>
               </li>
               <li>
-                <img
+                <img class="img"
                   src="images/portfolio8.jpg"
                   alt="fruit in a net held by a woman"
                   width="360"
@@ -159,7 +159,7 @@
                 </div>
               </li>
               <li>
-                <img
+                <img class="img"
                   src="images/portfolio9.jpg"
                   alt="making a pattern on coffee close-up"
                   width="360"
