--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </header>
 
     <main>
-      <div class="hero-image">
+      <section class="hero-image">
         <h1 class="title">Effective Solutions for Your Business</h1>
         <button type="button" class="hero-button">Order Service</button>
       </div>
@@ -94,15 +94,16 @@
           <h2 class="spec-header">What are we doing</h2>
           <ul class="spec-list">
             <li>
-              <img
+              <img class="img"
                 src="images/1.jpg"
                 alt="desktop computer screen with application displayed"
                 width="360"
                 height="300"
+                
               />
             </li>
             <li>
-              <img
+              <img class="img"
                 src="images/2.jpg"
                 alt="phone with several application screens displayed one above the other"
                 width="360"
@@ -110,7 +111,7 @@
               />
             </li>
             <li>
-              <img
+              <img class="img"
                 src="images/3.jpg"
                 alt="the same application displayed on the phone and computer screen"
                 width="360"
@@ -122,48 +123,52 @@
       </section>
 
       <div class="team-box">
-        <section class="section">
+        <section class="work-section">
           <div class="container">
             <h2 class="team-header">Our team</h2>
             <ul class="team-list">
               <li>
-                <img
+                <img class="img"
                   src="images/4.jpg"
                   alt="brunette guy looking straight ahead with stubble in a blue shirt"
                   width="264"
                   height="260"
                 />
-                <h3 class="worker-name">Mark Guerrero</h3>
+                <div class="work-name1">
+                <h3 class="worker-name">Mark Guerrero</h3></div>
                 <p class="worker-description">Product Designer</p>
               </li>
               <li>
-                <img
+                <img class="img"
                   src="images/5.jpg"
                   alt="brunette guy looking to the left smiling in blue shirt"
                   width="264"
                   height="260"
                 />
-                <h3 class="worker-name">Tom Ford</h3>
+                <div class="work-name1">
+                <h3 class="worker-name">Tom Ford</h3></div>
                 <p class="worker-description">Frontend Developer</p>
               </li>
               <li>
-                <img
+                <img class="img"
                   src="images/6.jpg"
                   alt="girl with long black hair looks straight ahead she is dressed in a pink sweater"
                   width="264"
                   height="260"
                 />
-                <h3 class="worker-name">Camila Garcia</h3>
+                <div class="work-name1">
+                <h3 class="worker-name">Camila Garcia</h3></div>
                 <p class="worker-description">cMarketing</p>
               </li>
               <li>
-                <img
+                <img class="img"
                   src="images/7.jpg"
                   alt="brunette guy with stubble looks straight ahead and smiles wearing a gray t-shirt"
                   width="264"
                   height="260"
                 />
-                <h3 class="worker-name">Daniel Wilson</h3>
+                <div class="work-name1">
+                <h3 class="worker-name">Daniel Wilson</h3></div>
                 <p class="worker-description">UI Designer</p>
               </li>
             </ul>
@@ -173,9 +178,8 @@
     </main>
 
     <footer class="footer-bg">
-      <section class="section">
         <div class="container">
-          <a href="./index.html" class="logo">
+          <a href="./index.html" class="footer-logo">
             <span class="logo-accent">Web</span
             ><span class="logo-accent-white">Studio</span>
           </a>
