--- a/index.html
+++ b/index.html
@@ -55,75 +55,79 @@
 
     <main>
       <section class="hero-image">
-        <h1 class="title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
-      </div>
-      <section class="section">
         <div class="container">
-          <ul class="feature-list">
-            <li>
-              <h3 class="feature">Strategy</h3>
-              <p class="feature-description">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
-            </li>
-            <li>
-              <h3 class="feature">Punctuality</h3>
-              <p class="feature-description">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
-            </li>
-            <li>
-              <h3 class="feature">Diligence</h3>
-              <p class="feature-description">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
-            </li>
-            <li>
-              <h3 class="feature">Technologies</h3>
-              <p class="feature-description">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
-            </li>
-          </ul>
-
-          <h2 class="spec-header">What are we doing</h2>
-          <ul class="spec-list">
-            <li>
-              <img class="img"
-                src="images/1.jpg"
-                alt="desktop computer screen with application displayed"
-                width="360"
-                height="300"
-                
-              />
-            </li>
-            <li>
-              <img class="img"
-                src="images/2.jpg"
-                alt="phone with several application screens displayed one above the other"
-                width="360"
-                height="300"
-              />
-            </li>
-            <li>
-              <img class="img"
-                src="images/3.jpg"
-                alt="the same application displayed on the phone and computer screen"
-                width="360"
-                height="300"
-              />
-            </li>
-          </ul>
-        </div>
+          <h1 class="title">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-button">Order Service</button>
+        </div>  
       </section>
+      <section class="section">
+          <div class="container">
+            <ul class="feature-list">
+              <li>
+                <h3 class="feature">Strategy</h3>
+                <p class="feature-description">
+                  Our goal is to identify the business problem to walk away with
+                  the perfect and creative solution.
+                </p>
+              </li>
+              <li>
+                <h3 class="feature">Punctuality</h3>
+                <p class="feature-description">
+                  Bring the key message to the brand's audience for the best price
+                  within the shortest possible time.
+                </p>
+              </li>
+              <li>
+                <h3 class="feature">Diligence</h3>
+                <p class="feature-description">
+                  Research and confirm brands that present the strongest digital
+                  growth opportunities and minimize risk.
+                </p>
+              </li>
+              <li>
+                <h3 class="feature">Technologies</h3>
+                <p class="feature-description">
+                  Design practice focused on digital experiences. We bring forth a
+                  deep passion for problem-solving.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </section>  
 
-      <div class="team-box">
-        <section class="work-section">
+
+        <section class="section">  
+            <h2 class="spec-header">What are we doing</h2>
+              <ul class="spec-list">
+                <li>
+                  <img class="img"
+                    src="images/1.jpg"
+                    alt="desktop computer screen with application displayed"
+                    width="360"
+                    height="300"
+                    
+                  />
+                </li>
+                <li>
+                  <img class="img"
+                    src="images/2.jpg"
+                    alt="phone with several application screens displayed one above the other"
+                    width="360"
+                    height="300"
+                  />
+                </li>
+                <li>
+                  <img class="img"
+                    src="images/3.jpg"
+                    alt="the same application displayed on the phone and computer screen"
+                    width="360"
+                    height="300"
+                  />
+                </li>
+              </ul>
+         </section>
+
+      <section class="work-section team-box">
           <div class="container">
             <h2 class="team-header">Our team</h2>
             <ul class="team-list">
@@ -135,8 +139,9 @@
                   height="260"
                 />
                 <div class="work-name1">
-                <h3 class="worker-name">Mark Guerrero</h3></div>
-                <p class="worker-description">Product Designer</p>
+                  <h3 class="worker-name">Mark Guerrero</h3>
+                  <p class="worker-description">Product Designer</p>
+                </div>  
               </li>
               <li>
                 <img class="img"
@@ -146,8 +151,9 @@
                   height="260"
                 />
                 <div class="work-name1">
-                <h3 class="worker-name">Tom Ford</h3></div>
-                <p class="worker-description">Frontend Developer</p>
+                  <h3 class="worker-name">Tom Ford</h3>
+                  <p class="worker-description">Frontend Developer</p>
+                </div>  
               </li>
               <li>
                 <img class="img"
@@ -157,8 +163,9 @@
                   height="260"
                 />
                 <div class="work-name1">
-                <h3 class="worker-name">Camila Garcia</h3></div>
-                <p class="worker-description">cMarketing</p>
+                  <h3 class="worker-name">Camila Garcia</h3>
+                  <p class="worker-description">cMarketing</p>
+                </div>
               </li>
               <li>
                 <img class="img"
@@ -168,17 +175,17 @@
                   height="260"
                 />
                 <div class="work-name1">
-                <h3 class="worker-name">Daniel Wilson</h3></div>
-                <p class="worker-description">UI Designer</p>
+                  <h3 class="worker-name">Daniel Wilson</h3>
+                  <p class="worker-description">UI Designer</p>
+                </div>  
               </li>
             </ul>
           </div>
-        </section>
-      </div>
+      </section>
     </main>
 
     <footer class="footer-bg">
-        <div class="container">
+        <section class="container">
           <a href="./index.html" class="footer-logo">
             <span class="logo-accent">Web</span
             ><span class="logo-accent-white">Studio</span>
