Next update hm3

--- a/index.html
+++ b/index.html
@@ -96,36 +96,39 @@
         </section>  
 
 
-        <section class="section">  
-            <h2 class="spec-header">What are we doing</h2>
-              <ul class="spec-list">
-                <li>
-                  <img class="img"
-                    src="images/1.jpg"
-                    alt="desktop computer screen with application displayed"
-                    width="360"
-                    height="300"
-                    
-                  />
-                </li>
-                <li>
-                  <img class="img"
-                    src="images/2.jpg"
-                    alt="phone with several application screens displayed one above the other"
-                    width="360"
-                    height="300"
-                  />
-                </li>
-                <li>
-                  <img class="img"
-                    src="images/3.jpg"
-                    alt="the same application displayed on the phone and computer screen"
-                    width="360"
-                    height="300"
-                  />
-                </li>
-              </ul>
-         </section>
+        <section class="doing section">
+          <div class="container">
+              <h2 class="spec-header">What are we doing</h2>
+                <ul class="spec-list">
+                  <li>
+                    <img class="img"
+                      src="images/1.jpg"
+                      alt="desktop computer screen with application displayed"
+                      width="360"
+                      height="300"
+                      
+                    />
+                  </li>
+                  <li>
+                    <img class="img"
+                      src="images/2.jpg"
+                      alt="phone with several application screens displayed one above the other"
+                      width="360"
+                      height="300"
+                    />
+                  </li>
+                  <li>
+                    <img class="img"
+                      src="images/3.jpg"
+                      alt="the same application displayed on the phone and computer screen"
+                      width="360"
+                      height="300"
+                    />
+                  </li>
+                </ul>
+
+          </div>
+        </section>
 
       <section class="work-section team-box">
           <div class="container">
