update hm3 last one

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
     </header>
 
     <main>
-        <section class="section">
+        <section class="portfolio-section">
           <div class="container">
             <h1 class="visually-hidden"> Portfolio Page </h1>
               <ul class="filters">
